Issue #1460 - Added option wordWrap (true by default) which changes the CSS 'white-space' property + tests

--- a/src/css/jquery.handsontable.css
+++ b/src/css/jquery.handsontable.css
@@ -84,6 +84,10 @@
   background-color: #ff4c42;
 }
 
+.handsontable td.htNoWrap {
+  white-space: nowrap;
+}
+
 .handsontable th:last-child {
   /*Foundation framework fix*/
   border-right: 1px solid #CCC;
